--- a/css/estilo.css
+++ b/css/estilo.css
@@ -43,7 +43,8 @@ body{
 	color: #414141;
 }
 #page_one label{
-	font-family: "Arial Rounded MT Bold", Monaco, monospace;
+//	font-family: "Arial Rounded MT Bold", Monaco, monospace;
+  font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 	font-size: 250%;
 	color: #767a2f;	
 }
@@ -201,7 +202,11 @@ body{
 	margin-top: 15%;
 	margin-left: 5%;
 	font-size: 5em;
-	font-family: Verdana, Geneva, sans-serif;	
+//	font-family: Verdana, Geneva, sans-serif;	
+//	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+	color:#333333;
+text-transform: uppercase;
 }
 
 /* :: Navbar
@@ -218,6 +223,7 @@ body{
 	z-index: 2;
 	position: fixed;
 	background-color: #5a5a5a; 
+	text-transform: uppercase;
 }
 
 #trans-nav img{
@@ -418,12 +424,16 @@ body{
 
 
 .c-quienes-somos{
-  font-size: 2em;
-	font-family: Verdana, Geneva, sans-serif;	
+  font-size: 20px;
+//  font-family: "Arial Rounded MT Bold", Monaco, monospace;
+  font-family: Consolas, monaco, monospace; 
 	color: white;
-	width: 70%;
-	margin-right: auto;
-	margin-left: auto;
+	width: 30%;
+  float: left;
+  position: relative;
+  left: 70px;
+  top: 20px;
+  //text-transform: uppercase;
 }
 
 .contact{
@@ -471,4 +481,65 @@ body{
 
 #email{
 	background-color: #00a8ec;
+}
+
+.research-logos {
+  margin-left:auto;
+  margin-right: auto;
+  width: 70%;
+  margin-top: 20px;
+}
+
+.research-logos img {
+  height: 100px;
+  margin-right: 40px;
+  margin-bottom: 30px;
+}
+
+#pic-members {
+  width: 600px;
+  float:right;
+  position: relative; 
+  right: 15%;
+  top: -200px;
+}
+
+#member-list {
+  position:relative;
+  left: 70px;
+  top: 10px;
+  font-family: Consolas, monaco, monospace;
+  width: 30%;
+}
+
+#member-list ul{
+  list-style-type: none;
+  margin-top: 5px;
+}
+
+#member-list div {
+  width: 200px; 
+}
+
+#member-list h4{
+  margin-top: 10px;
+}
+
+#bt-new-member {
+  text-transform: uppercase;
+  font-size: 10px;
+  font-family: Consolas, monaco, monospace; 
+  clear: both;
+  position: absolute;  
+  bottom: 10px;
+  right: 10px;
+  text-decoration: underline;
+}
+
+#bt-new-member:hover {
+  cursor: pointer;
+}
+
+#members-student {
+  float: right;
 }
