--- a/css/estilo.css
+++ b/css/estilo.css
@@ -10,7 +10,7 @@ body{
 	position: fixed;
 	background-color: darkgray;
 	opacity: 0.8;
-	z-index: 2;	
+	z-index: 4;	
 }
 #header ul{ list-style-type:none; margin:0; padding:0;}
 #header li{
@@ -186,7 +186,7 @@ body{
 	height: 100%;
 	top: 300%;
 	position: absolute;
-	background-color: yellow;
+	background-color: #FFFB1A;
 }
 
 #page_five{
@@ -195,11 +195,26 @@ body{
 	top: 400%;
 	position: absolute;
 //	background-color: #5c110f;
-	background-color: white;
+	background-color: #BABABA;
+}
+
+#move-left{
+	position: absolute;	
+	margin-top: -5%;
+	margin-left: 92%;
+	z-index: 4;
+	opacity: 0.2;
+}
+#move-right{
+	position: absolute;	
+	margin-top: -5%;
+	margin-left: 2%;
+	z-index: 4;
+	opacity: 0.2;
 }
 
 #numero{
-	margin-top: 15%;
+	margin-top: 12%;
 	margin-left: 5%;
 	font-size: 5em;
 //	font-family: Verdana, Geneva, sans-serif;	
@@ -306,7 +321,7 @@ text-transform: uppercase;
 	opacity: 0.7;
 	height: 1.5%; 
 	width: 100%;	
-	z-index: 1;
+	z-index: 4;
 	position: fixed;
 	background-color: gray;
 	top: 7%;
@@ -483,25 +498,12 @@ text-transform: uppercase;
 	background-color: #00a8ec;
 }
 
-.research-logos {
-  margin-left:auto;
-  margin-right: auto;
-  width: 70%;
-  margin-top: 20px;
-}
-
-.research-logos img {
-  height: 100px;
-  margin-right: 40px;
-  margin-bottom: 30px;
-}
-
 #pic-members {
   width: 600px;
   float:right;
   position: relative; 
   right: 15%;
-  top: -200px;
+  top: -250px;
 }
 
 #member-list {
@@ -542,4 +544,54 @@ text-transform: uppercase;
 
 #members-student {
   float: right;
+}
+
+
+#makeMeScrollable{
+	width: 100%;
+	height: auto;
+	position: relative;
+}		
+#makeMeScrollable div.scrollableArea img{
+	position: relative;
+	float: left;
+	z-index: 1;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-o-user-select: none;
+	user-select: none;
+	padding-left: 50px;
+	padding-right: 50px;	
+}					
+div.scrollingHotSpotLeft{	
+	min-width: 75px;
+	width: 10%;
+	height: 100%;			
+	position: absolute;
+	z-index: 200;
+	left: 0;	
+	cursor: url(../cursors/cursor_arrow_left.png), url(../cursors/cursor_arrow_left.cur),w-resize;
+}
+div.scrollingHotSpotLeftVisible{}
+div.scrollingHotSpotRight{
+	min-width: 75px;
+	width: 10%;
+	height: 100%;	
+	position: absolute;
+	z-index: 200;
+	right: 0;
+	cursor: url(../cursors/cursor_arrow_right.png), url(../cursors/cursor_arrow_right.cur),e-resize;
+}
+div.scrollingHotSpotRightVisible{}
+div.scrollWrapper{
+	position: relative;
+	overflow: hidden;
+	width: 100%;
+	height: 100%;
+}
+div.scrollableArea{
+	position: relative;
+	width: auto;
+	height: 100%;
 }
