--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,79 +4,106 @@ body{
 	overflow-x: hidden;
 }
 
-#header{
-	width: 100%;
-	height: 8%;
+#logo{
+	display: inline-block;
+	height: auto;
+	width: auto;
+	z-index: 3;
 	position: fixed;
-	background-color: darkgray;
-	opacity: 0.8;
-	z-index: 4;	
+	color: white;
+	margin-left: 10px;
+	line-height: 40px;	
+	display: none;
 }
-#header ul{ list-style-type:none; margin:0; padding:0;}
-#header li{
-	display:inline; 
-	width: 20%;
+#logo img, label{ vertical-align: middle;}
+
+#main_nav{		
+	top: 0;
+	height: auto;
+	width: 100%;
+	text-align: right;
+	color: white;
+	background-color: rgb(90,90,90);
+	position: fixed;
+	z-index: 2;
+	display: block;	
+}
+#main_nav ul{
+	list-style-type: none; 
+	float: right;
+	margin: 0;	
+}
+#main_nav li{
+	display: inline-block;
+	position: relative;
+	padding: 15px;
+	float: left;
+	font-family: "Arial Rounded MT Bold", Monaco, monospace;
+}
+#main_nav li:hover{
+	color: black;	
+	cursor: pointer;
+}
+
+#inicio{
+	color: black;
+	background-color: rgb(217,222,224);
+}
+#quienes{
+	color: black;
+	background-color: #4ba3a8;
+}
+#miembros{
+	color: black;
+	background-color: #bec465;
+}
+#investigacion{
+	color: black;
+	background-color: #FFFB1A;
+}
+#contacto{
+	color: black;
+	background-color: #EDF9EC;
 }
 
 /*----------------------------------------------------------------------------------------------------------*/
 /*---------------------------------------------------PAGINA UNO--------------------------------------------*/
 /*----------------------------------------------------------------------------------------------------------*/
 #page_one{
-	width: 200%;
+	width: 100%;
 	height: 100%; 		
 	position: absolute;
 	background-image: url('../img/pageOne.png');
 	perspective: 800px;
 }
-#page_one table{	
-	display: table-cell;
-    vertical-align: middle;    
+
+#page_one img{
+	width: 30%;
+	top: 25%;
+	left: 10%;
+	position: absolute;
 }
-#tablaCentrada{	
-	height: 70%;	
-	margin-top: 13%;		
-}
-#page_one table td{text-align:left; vertical-align:middle}
+
 #page_one h1{
+	width: 40%;
+	top: 30%;
+	left: 47%;
 	font-family: "Arial Rounded MT Bold", Monaco, monospace;
 	font-size: 700%;
 	color: #414141;
+	position: absolute;
 }
-#page_one label{
-//	font-family: "Arial Rounded MT Bold", Monaco, monospace;
-  font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
+#page_one p{
+	width: 40%;
+	top: 50%;
+	left: 47%;
+	//font-family: "Arial Rounded MT Bold", Monaco, monospace;
+	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 	font-size: 250%;
-	color: #767a2f;	
-}
-
-#pag1Left button {	
-	border: black;
-	border-style: solid;
-	border-width: 1px;
-	font-family: "Arial Rounded MT Bold", Monaco, monospace;
-	font-size: 120%;
-	padding: 1% 1.5%;
-	cursor: pointer;	
-}
-#pag1Left button:hover{background: gray;}
-
-#pag1Left{
-	width: 50%;
-	height: 100%; 		
-	margin-left: 0;
-	left: 0;	
+	color: #767a2f;
 	position: absolute;
 }
 
-#pag1Right{
-	width: 50%;
-	height: 100%;
-	margin-left: 50%;
-	left: 50%;
-	background-image: url('../img/pageOne.png');
-	position: absolute;
-	color: black;
-}
 
 /*----------------------------------------------------------------------------------------------------------*/
 /*---------------------------------------------------PAGINA DOS--------------------------------------------*/
@@ -86,54 +113,60 @@ body{
 	height: 100%;
 	top: 100%;
 	position: absolute;
-	background-color: #0e4d53;
+	background-color: #4ba3a8;	
+}
+#page_two img{
+	top: 14%;
+	left: 40%;
+	position: absolute;
+	width: 40%;
+	height: 72%;
+}
+.c-quienes-somos{
+	color: white;
+	width: 30%;
+	left: 5%;	
+	font-size: 1.5em; 
+	//font-family: "Arial Rounded MT Bold", Monaco, monospace;
+	font-family: Consolas, monaco, monospace; 		
+	position: relative;	
+	//text-transform: uppercase;
+	margin-top: 1%;
 }
 
 /*----------------------------------------------------------------------------------------------------------*/
 /*---------------------------------------------------PAGINA TRES--------------------------------------------*/
 /*----------------------------------------------------------------------------------------------------------*/
 #page_tree{
-	width: 200%;
+	width: 100%;
 	height: 100%; 
 	top: 200%;	
 	position: absolute;
 	background-color: #bec465;	
 }
-#pag3Left{
-	width: 50%;
-	height: 100%; 		
-	margin-left: 0;
-	left: 0;
-	background-color: #bec465;
+#page_tree img{
+	top: 14%;
+	left: 40%;
 	position: absolute;
+	width: 40%;
+	height: 72%;
 }
 
-#pag3Left button {	
-	border: black;
-	border-style: solid;
-	border-width: 2px;	
-	font-size: 150%;
-	cursor: pointer;	
+#member-list {
+	position:relative;
+	left: 70px;
+	top: 10px;
+	font-family: Consolas, monaco, monospace;
+	width: 30%;
 }
-#pag3Left button:hover{background: gray;}
 
-#pag3Right{
-	width: 50%;
-	height: 100%;
-	margin-left: 50%;
-	left: 50%;
-	background-color: #bec465;
-	position: absolute;
-	color: black;
+#member-list ul{
+	list-style-type: none;
+	margin-top: 5px;
 }
-#pag3Right button {	
-	border: black;
-	border-style: solid;
-	border-width: 1.5px;
-	font-size: 100%;
-	cursor: pointer; 	
-}
-#pag3Right button:hover{background: gray;}
+#member-list div {width: 200px;}
+#member-list h4{margin-top: 10px;}
+#members-student {float: right;}
 
 #fondoBlanco, #fondo{
 	width: 40%;
@@ -189,364 +222,6 @@ body{
 	background-color: #FFFB1A;
 }
 
-#page_five{
-	width: 100%;
-	height: 100%;
-	top: 400%;
-	position: absolute;
-//	background-color: #5c110f;
-	background-color: #BABABA;
-}
-
-#move-left{
-	position: absolute;	
-	margin-top: -5%;
-	margin-left: 92%;
-	z-index: 4;
-	opacity: 0.2;
-}
-#move-right{
-	position: absolute;	
-	margin-top: -5%;
-	margin-left: 2%;
-	z-index: 4;
-	opacity: 0.2;
-}
-
-#numero{
-	margin-top: 12%;
-	margin-left: 5%;
-	font-size: 5em;
-//	font-family: Verdana, Geneva, sans-serif;	
-//	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
-	color:#333333;
-text-transform: uppercase;
-}
-
-/* :: Navbar
---------------------------------------------------------------------
---------------------------------------------------------------------
---------------------------------------------------------------------*/
-
-#trans-nav { 
-	list-style-type: none; 
-	height: 7%; 
-	width: 100%;
-	padding: 0; 
-	margin: 0; 
-	z-index: 2;
-	position: fixed;
-	background-color: #5a5a5a; 
-	text-transform: uppercase;
-}
-
-#trans-nav img{
-	float: left;
-	position: relative; 
-	width: 3.5%;
-	height: 90%;
-	margin-top: 0.2%;
-	margin-left: 1%;
-}
-
-#trans-nav label{
-	float: left;
-	position: relative; 
-	padding: 0; 
-	height: 100%;
-	line-height: 200%; 	
-	background-color: #5a5a5a; 
-	display: block; 
-	padding: 0 1.5%; 	
-	text-decoration: none;	
-	font-family: "Arial Rounded MT Bold", Monaco, monospace;
-	font-size: 150%;
-	text-align: center;
-	color: #dddddd;
-}
-
-#trans-nav li { 
-	float: right; 
-	position: relative; 
-	padding: 0; 
-	height: 100%;
-	line-height: 300%; 	
-	background-color: #5a5a5a; 
-	display: block; 
-	padding: 0 15px; 	
-	text-decoration: none;	
-	font-family: "Arial Rounded MT Bold", Monaco, monospace;
-	font-size: 100%;
-	text-align: center;
-	color: #dddddd;
-}
-
-#trans-nav li:hover { 
-	background-position: 0 -40px; 
-	color: black;
-	background-color: darkgray;
-}
-
-#trans-nav li ul { 
-	opacity: 0; 
-	position: absolute; 
-	left: 0; 
-	width: 8em; 
-	background: #63867f; 
-	list-style-type: none; 
-	padding: 0; 
-	margin: 0; 
-}
-
-#trans-nav li:hover ul {opacity: 1;	}
-
-#trans-nav li ul li {
-	float: none; 
-	position: static; 
-	height: 0; 
-	line-height: 0; 
-	background: none; 	
-}
-
-#trans-nav li:hover ul li { 
-	height: 120%; 
-	line-height: 250%; 
-	background-color: darkgray; 
-}
-
-#trans-nav li:hover ul li:hover { background-color: white; opacity: 0.7;}
-
-#trans-nav-line{
-	opacity: 0.7;
-	height: 1.5%; 
-	width: 100%;	
-	z-index: 4;
-	position: fixed;
-	background-color: gray;
-	top: 7%;
-}
-
-#active{color: #ffffff;}
-
-/* :: Social
---------------------------------------------------------------------
---------------------------------------------------------------------
---------------------------------------------------------------------*/
-#facebook{
-	position: fixed;
-	right: 0;
-	top: 40%;
-	width: 4%;
-	height: 6%;
-	background-color: #4a6ea9;
-	transition:width 0.5s;
-	-moz-transition:width 0.5s;
-	-webkit-transition:width 0.5s;
-	z-index: 2;
-}
-#facebook img{width: auto;}
-#facebook:hover{width: 10%;}
-#facebook:hover img{width: auto;}
-
-#twitter{
-	position: fixed;
-	right: 0;
-	top: 46%;
-	width: 4%;
-	height: 6%;
-	background-color: #32def4;
-	transition:width 0.5s;
-	-moz-transition:width 0.5s;
-	-webkit-transition:width 0.5s;
-	z-index: 2;
-}
-#twitter img{width: auto;}
-#twitter:hover{width: 10%;}
-#twitter:hover img{width: auto;}
-
-#github{
-	position: fixed;
-	right: 0;
-	top: 52%;
-	width: 4%;
-	height: 6%;
-	background-color: #3b3b3b;
-	transition:width 0.5s;
-	-moz-transition:width 0.5s;
-	-webkit-transition:width 0.5s;
-	z-index: 2;
-}
-#github img{width: auto;}
-#github:hover{width: 10%;}
-#github:hover img{width: auto;}
-
-#rss{
-	position: fixed;
-	right: 0;
-	top: 58%;
-	width: 4%;
-	height: 6%;
-	background-color: #f4b83f;
-	transition:width 0.5s;
-	-moz-transition:width 0.5s;
-	-webkit-transition:width 0.5s;
-	z-index: 2;
-}
-#rss img{width: auto;}
-#rss:hover{width: 10%;}
-#rss:hover img{width: auto;}
-
-#more{
-	position: fixed;
-	right: 0;
-	top: 64%;
-	width: 4%;
-	height: 6%;
-	background-color: #8d8d8d;
-	transition:width 0.5s;
-	-moz-transition:width 0.5s;
-	-webkit-transition:width 0.5s;
-	z-index: 2;
-	cursor: pointer;
-}
-#more img{width: auto;}
-#more:hover{width: 10%;}
-#more:hover img{width: auto;}
-
-/* :: Footer
---------------------------------------------------------------------
---------------------------------------------------------------------
---------------------------------------------------------------------*/
-
-#footer{
-	width: 100%;
-	height: 30%;
-	top: 500%;
-	position: absolute;
-	background-color: #524f4f;
-	text-align: center;
-}
-
-#lineaFondo{
-	margin-bottom: 0;
-	background-color: darkgray;
-	width: 100%;
-	height: 7%;
-	opacity: 0.8;
-	position: absolute;
-}
-
-
-.c-quienes-somos{
-  font-size: 20px;
-//  font-family: "Arial Rounded MT Bold", Monaco, monospace;
-  font-family: Consolas, monaco, monospace; 
-	color: white;
-	width: 30%;
-  float: left;
-  position: relative;
-  left: 70px;
-  top: 20px;
-  //text-transform: uppercase;
-}
-
-.contact{
-	width: 33.33%;
-	height: 30%;
-	background-color: #438bfb; /*#e3b639;*/
-  float: left;
-	color: white;
-  font-family: "Arial Rounded MT Bold", Monaco, monospace;
-}
-
-.contact div {
-  position: relative;
-  top: 20px;
-}
-
-.contact img {
-  margin-left:auto;
-  margin-right:auto;
-  width: 25%;
-  height: 50%;
-  position: relative;
-  left: 40%;  
-}
-
-.contact p {
-  text-align:center;  
-  font-size: 150%; 
-  position: relative;
-  top: 10px;
-}
-
-.contact p a {
-  color: white;
-  text-decoration: none;
-}
-
-#phone{
-	background-color: #438bfb; 
-}
-
-#skype{
-	background-color: #10bef2;
-}
-
-#email{
-	background-color: #00a8ec;
-}
-
-#pic-members {
-  width: 600px;
-  float:right;
-  position: relative; 
-  right: 15%;
-  top: -250px;
-}
-
-#member-list {
-  position:relative;
-  left: 70px;
-  top: 10px;
-  font-family: Consolas, monaco, monospace;
-  width: 30%;
-}
-
-#member-list ul{
-  list-style-type: none;
-  margin-top: 5px;
-}
-
-#member-list div {
-  width: 200px; 
-}
-
-#member-list h4{
-  margin-top: 10px;
-}
-
-#bt-new-member {
-  text-transform: uppercase;
-  font-size: 10px;
-  font-family: Consolas, monaco, monospace; 
-  clear: both;
-  position: absolute;  
-  bottom: 10px;
-  right: 10px;
-  text-decoration: underline;
-}
-
-#bt-new-member:hover {
-  cursor: pointer;
-}
-
-#members-student {
-  float: right;
-}
-
-
 #makeMeScrollable{
 	width: 100%;
 	height: auto;
@@ -594,4 +269,197 @@ div.scrollableArea{
 	position: relative;
 	width: auto;
 	height: 100%;
+}
+#move-left{
+	position: absolute;	
+	margin-top: -5%;
+	margin-left: 92%;
+	z-index: 4;
+	opacity: 0.2;
+}
+#move-right{
+	position: absolute;	
+	margin-top: -5%;
+	margin-left: 2%;
+	z-index: 4;
+	opacity: 0.2;
+}
+
+/*------------------------------------------------------------------------------------------------------------*/
+/*---------------------------------------------------PAGINA CINCO---------------------------------------------*/
+/*------------------------------------------------------------------------------------------------------------*/
+
+#page_five{
+	width: 100%;
+	height: 100%;
+	top: 400%;
+	position: absolute;
+//	background-color: #5c110f;
+	background-color: #EDF9EC;
+}
+
+#page_five #information{
+	width: 100%;
+	height: 30%;
+	top: 35%;	
+	position: absolute;
+}
+
+.contact{
+	width: 33.33%;
+	height: 100%;
+	background-color: #438bfb;
+	float: left;
+	color: white;
+	font-family: "Arial Rounded MT Bold", Monaco, monospace;
+}
+
+.contact div {
+  position: relative;
+  top: 15%;
+}
+
+.contact img {
+  margin-left: auto;
+  margin-right: auto;
+  width: 25%;
+  height: 50%;
+  position: relative;
+  left: 40%;  
+}
+
+.contact p {
+  text-align:center;  
+  font-size: 150%; 
+  position: relative;
+  top: 15%;
+}
+
+.contact p a {
+  color: white;
+  text-decoration: none;
+}
+
+#phone{
+	background-color: #438bfb; 
+}
+
+#skype{
+	background-color: #10bef2;
+}
+
+#email{
+	background-color: #00a8ec;
+}
+
+
+/* :: Social
+--------------------------------------------------------------------
+--------------------------------------------------------------------
+--------------------------------------------------------------------*/
+#facebook{
+	position: fixed;
+	right: 0;
+	top: 35%;
+	width: 4%;
+	height: 6%;
+	background-color: #4a6ea9;
+	transition:width 0.5s;
+	-moz-transition:width 0.5s;
+	-webkit-transition:width 0.5s;
+	z-index: 2;
+}
+#facebook img{width: auto;}
+#facebook:hover{width: 10%;}
+#facebook:hover img{width: auto;}
+
+#twitter{
+	position: fixed;
+	right: 0;
+	top: 41%;
+	width: 4%;
+	height: 6%;
+	background-color: #32def4;
+	transition:width 0.5s;
+	-moz-transition:width 0.5s;
+	-webkit-transition:width 0.5s;
+	z-index: 2;
+}
+#twitter img{width: auto;}
+#twitter:hover{width: 10%;}
+#twitter:hover img{width: auto;}
+
+#github{
+	position: fixed;
+	right: 0;
+	top: 47%;
+	width: 4%;
+	height: 6%;
+	background-color: #3b3b3b;
+	transition:width 0.5s;
+	-moz-transition:width 0.5s;
+	-webkit-transition:width 0.5s;
+	z-index: 2;
+}
+#github img{width: auto;}
+#github:hover{width: 10%;}
+#github:hover img{width: auto;}
+
+#rss{
+	position: fixed;
+	right: 0;
+	top: 53%;
+	width: 4%;
+	height: 6%;
+	background-color: #f4b83f;
+	transition:width 0.5s;
+	-moz-transition:width 0.5s;
+	-webkit-transition:width 0.5s;
+	z-index: 2;
+}
+#rss img{width: auto;}
+#rss:hover{width: 10%;}
+#rss:hover img{width: auto;}
+
+#more{
+	position: fixed;
+	right: 0;
+	top: 59%;
+	width: 4%;
+	height: 6%;
+	background-color: #8d8d8d;
+	transition:width 0.5s;
+	-moz-transition:width 0.5s;
+	-webkit-transition:width 0.5s;
+	z-index: 2;
+	cursor: pointer;
+}
+#more img{width: auto;}
+#more:hover{width: 10%;}
+#more:hover img{width: auto;}
+
+/* :: Various
+--------------------------------------------------------------------
+--------------------------------------------------------------------
+--------------------------------------------------------------------*/
+
+#footer{
+	width: 100%;
+	height: 30%;
+	top: 500%;
+	position: absolute;
+	background-color: #524f4f;
+	text-align: center;
+}
+
+#numero{
+	margin-top: 10%;
+	margin-left: 5%;
+	font-size: 5em;
+//	font-family: Verdana, Geneva, sans-serif;	
+//	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+	color:#333333;
+	text-transform: uppercase;
+	position: relative;	
 }
