--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,8 @@
+
+.clearfix:before,.clearfix:after{content: " "; display: table;}
+.clearfix:after{clear: both;}
+.clearfix{*zoom: 1;}
+
 body{
 	width: 100%;
 	height: auto;	
@@ -39,10 +44,114 @@ body{
 	padding: 15px;
 	float: left;
 	font-family: "Arial Rounded MT Bold", Monaco, monospace;
+	font-size: 1em;
 }
 #main_nav li:hover{
 	color: black;	
 	cursor: pointer;
+}
+
+#main_nav div#pull {
+	display: none;
+}
+
+/*Styles for screen 800px and lower*/
+@media screen and (max-width: 800px){
+  	#main_nav li{		
+		padding: 10px;
+		font-size: 0.8em;
+	}	
+	#logo img{
+		width: 30px;
+		margin-top:-10px; 		
+	}
+	#logo label{
+		font-size: 0.8em;
+		margin-top: -42px;
+		margin-left: 33px;
+		position: fixed;
+	}
+}
+
+/*Styles for screen 600px and lower*/
+@media screen and (max-width: 600px){
+  	#main_nav li{		
+		padding: 7px;
+		font-size: 0.65em;
+	}
+	#logo img{
+		width: 25px;
+		margin-top:-20px; 		
+	}
+	#logo label{
+		font-size: 0.65em;
+		margin-top: -46px;
+		margin-left: 30px;		
+	}
+}
+
+
+/*Styles for screen 450px and lower*/
+@media only screen and (max-width : 450px) {
+	#main_nav{height: 30px;}
+	#main_nav ul {
+		margin-top: 30px;
+		width: 50%;
+		right: 0;
+		display: none;
+		background-color: rgb(90,90,90);
+	}
+	#main_nav li{
+		display: block;
+		width: 80%;
+		margin-left: 5%;
+		padding: 7px;
+		font-size: 0.65em;
+	}
+	#main_nav div#pull{display: block;}
+	#main_nav div#pull:hover{cursor:pointer;}
+	#main_nav div#pull:after {		
+		content: "";
+		background: url('../img/menu.png') no-repeat;
+		background-position: -5px 0px;
+		display: inline-block;
+		position: absolute;
+		width: 25px;
+		height: 50px;
+		right: 0;
+		top: 5px;
+	}	
+	#logo img{
+		width: 26px;
+		margin-top:-15px; 		
+	}
+	#logo label{
+		font-size: 0.8em;
+		margin-top: -44px;
+		margin-left: 30px;		
+	}
+}
+
+/*Smartphone*/
+@media only screen and (max-width : 320px) {
+	#main_nav{height: 25px;}	
+	#main_nav ul {margin-top: 25px;}	
+	#main_nav div#pull:after {		
+		background-position: -10px -5px;
+		width: 25px;				
+		height: 30px;
+		right: -5px;		
+		top: 4px;
+	}	
+	#logo img{
+		width: 23px;
+		margin-top:-18px; 		
+	}
+	#logo label{
+		font-size: 0.7em;
+		margin-top: -47px;
+		margin-left: 25px;		
+	}
 }
 
 #inicio{
