--- a/css/estilo.css
+++ b/css/estilo.css
@@ -39,7 +39,7 @@ nav li{
 	position: relative;
 	padding: 15px;
 	float: left;
-	font-family: "Arial Rounded MT Bold", Monaco, monospace;
+	font-family: Century Gothic, sans-serif;
 	font-size: 1.1em;
 	color: black;
 }
@@ -60,6 +60,15 @@ nav ul li a:hover{ color: white;}
 	top: 0;
 }
 
+footer{
+	background-color: rgb(82,82,82);
+	padding-top: 15px;
+	padding-bottom: 15px;
+	text-align: center;
+	color: white;
+	font-family: Century Gothic, sans-serif;
+}
+
 #facebook, #twitter, #github, #rss, #blog{
 	position: fixed;
 	right: 0;	
@@ -68,7 +77,7 @@ nav ul li a:hover{ color: white;}
 	transition:width 0.5s;
 	-moz-transition:width 0.5s;
 	-webkit-transition:width 0.5s;
-	z-index: 2;
+	z-index: 101;
 }
 #facebook img, #twitter img, #github img, #rss img, #blog img{width: auto;}
 #facebook:hover, #twitter:hover, #github:hover, #rss:hover, #blog:hover{width: 10%; cursor:pointer;}
@@ -82,7 +91,7 @@ nav ul li a:hover{ color: white;}
 #inicio{ background-color: rgb(217,222,224); }
 #quienes{ background-color: #4ba3a8; }
 #miembros{ background-color: #bec465; }
-#investigacion{ background-color: #FFFB1A; }
+#investigacion{ background-color: rgb(230,230,230); }
 #contacto{ background-color: #EDF9EC; }
 
 /*----------------------------------------------------------------------------------------------------------*/
@@ -105,7 +114,7 @@ nav ul li a:hover{ color: white;}
 	display: inline-block;
 	width: 40%;
 	margin-top: 50px;
-	font-family: "Arial Rounded MT Bold", Monaco, monospace;
+	font-family: Century Gothic, sans-serif;
 	color: rgb(90,90,90);
 }
 
@@ -124,7 +133,7 @@ nav ul li a:hover{ color: white;}
 	margin-left: 100px;
 	margin-top: 50px;
 	font-size: 2em;
-	font-family: Consolas, monaco, monospace;
+	font-family: Century Gothic, sans-serif;
 	display: inline-block;
 }
 #page_two div{
@@ -232,72 +241,9 @@ nav ul li a:hover{ color: white;}
 /*------------------------------------------------------------------------------------------------------------*/
 #page_four{
 	display: block;
-	background-color: #FFFB1A;
+	background-color: rgb(230,230,230);
 	padding-top: 100px;
 	padding-bottom: 100px;
-}
-
-#makeMeScrollable{
-	width: 100%;
-	height: auto;
-	position: relative;
-}		
-#makeMeScrollable div.scrollableArea img{
-	position: relative;
-	float: left;
-	z-index: 1;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-o-user-select: none;
-	user-select: none;
-	padding-left: 50px;
-	padding-right: 50px;	
-}					
-div.scrollingHotSpotLeft{	
-	min-width: 75px;
-	width: 10%;
-	height: 100%;			
-	position: absolute;
-	z-index: 200;
-	left: 0;	
-	cursor: url(../cursors/cursor_arrow_left.png), url(../cursors/cursor_arrow_left.cur),w-resize;
-}
-div.scrollingHotSpotLeftVisible{}
-div.scrollingHotSpotRight{
-	min-width: 75px;
-	width: 10%;
-	height: 100%;	
-	position: absolute;
-	z-index: 200;
-	right: 0;
-	cursor: url(../cursors/cursor_arrow_right.png), url(../cursors/cursor_arrow_right.cur),e-resize;
-}
-div.scrollingHotSpotRightVisible{}
-div.scrollWrapper{
-	position: relative;
-	overflow: hidden;
-	width: 100%;
-	height: 100%;
-}
-div.scrollableArea{
-	position: relative;
-	width: auto;
-	height: 100%;
-}
-#move-left{
-	position: absolute;	
-	margin-top: -5%;
-	margin-left: 92%;
-	z-index: 4;
-	opacity: 0.2;
-}
-#move-right{
-	position: absolute;	
-	margin-top: -5%;
-	margin-left: 2%;
-	z-index: 4;
-	opacity: 0.2;
 }
 
 /*------------------------------------------------------------------------------------------------------------*/
@@ -314,21 +260,24 @@ div.scrollableArea{
 	height: auto;
 	margin-top: 50px;
 }
+iframe{
+	border-top: 4px solid white;
+	border-bottom: 2px solid white;
+}
 
 .contact{
 	display: inline-block;
 	width: 33.33%;
 	color: white;
 	float: left;
-	font-family: "Arial Rounded MT Bold", Monaco, monospace;
+	font-family: Century Gothic, sans-serif;
 	padding-top: 40px;
 	padding-bottom: 50px;
-	margin-bottom: 250px;
 }
 
 .contact h1, .contact p {
 	text-align: center;  
-	font-size: 2em;
+	font-size: 1.4em;
 	margin: 0;
 	padding: 0;
 }
@@ -480,6 +429,7 @@ div.scrollableArea{
 		padding-top: 20px; 
 		padding-bottom: 40px;
 	}
+	#page_five{padding-bottom: 0;}
 	#page_two p{
 		width: 90%;
 		margin-left: 5%;
