--- a/css/estilo.css
+++ b/css/estilo.css
@@ -91,7 +91,7 @@ footer{
 #inicio{ background-color: rgb(217,222,224); }
 #quienes{ background-color: #4ba3a8; }
 #miembros{ background-color: #bec465; }
-#investigacion{ background-color: rgb(230,230,230); }
+#investigacion{ background-color: rgb(242,238,238); }
 #contacto{ background-color: #EDF9EC; }
 
 /*----------------------------------------------------------------------------------------------------------*/
@@ -241,7 +241,9 @@ footer{
 /*------------------------------------------------------------------------------------------------------------*/
 #page_four{
 	display: block;
-	background-color: rgb(230,230,230);
+	background-color: rgb(242,238,238);
+	background-image: url(../img/diamond-pattern.png);
+	background-repeat: repeat;
 	padding-top: 100px;
 	padding-bottom: 100px;
 }
@@ -485,6 +487,57 @@ iframe{
 		font-size: 2em;
 	}
 }
-@media only screen and (max-width : 480px){
 
+#makeMeScrollable{
+	display: inline-block;
+	width: 100%;
+	height: 70%;
+	padding-top: 1em;
+	-webkit-overflow-scrolling: touch;
+}		
+#makeMeScrollable div.scrollableArea img{
+	position: relative;
+	float: left;
+	z-index: 4;
+	background-color: #fcfafa;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-o-user-select: none;
+	user-select: none;				
+	border: 10px solid #fcfafa;
+	-moz-box-shadow: 0 3px 10px #888; 
+	-webkit-box-shadow: 0 3px 10px #888;
+	margin: 0.8em;
+}
+div.scrollingHotSpotLeft{	
+	min-width: 75px;
+	width: 10%;
+	height: 50%;			
+	position: absolute;
+	z-index: 200;
+	left: 0;	
+	cursor: url(../cursors/cursor_arrow_left.png), url(../cursors/cursor_arrow_left.cur),w-resize;
+}
+div.scrollingHotSpotLeftVisible{}
+div.scrollingHotSpotRight{
+	min-width: 75px;
+	width: 10%;
+	height: 50%;	
+	position: absolute;
+	z-index: 200;
+	right: 0;
+	cursor: url(../cursors/cursor_arrow_right.png), url(../cursors/cursor_arrow_right.cur),e-resize;
+}
+div.scrollingHotSpotRightVisible{}
+div.scrollWrapper{
+	position: relative;
+	overflow: hidden;
+	width: 100%;
+	height: 100%;
+}
+div.scrollableArea{
+	position: relative;
+	width: auto;
+	height: 100%;
 }
