--- a/css/estilo.css
+++ b/css/estilo.css
@@ -184,7 +184,7 @@ footer{
 	display: inline-block;
 	width: 45%;
 	vertical-align: top;
-	margin-top: -50px;
+	margin-top: 50px;
 }
 #members img{	
 	display: inline-block;
@@ -486,6 +486,10 @@ iframe{
 		color: white;
 		font-size: 2em;
 	}
+	div.scrollWrapper{
+		overflow-x: auto;
+		overflow-y: auto;
+	}
 }
 
 #makeMeScrollable{
@@ -519,7 +523,6 @@ div.scrollingHotSpotLeft{
 	left: 0;	
 	cursor: url(../cursors/cursor_arrow_left.png), url(../cursors/cursor_arrow_left.cur),w-resize;
 }
-div.scrollingHotSpotLeftVisible{}
 div.scrollingHotSpotRight{
 	min-width: 75px;
 	width: 10%;
@@ -535,9 +538,11 @@ div.scrollWrapper{
 	overflow: hidden;
 	width: 100%;
 	height: 100%;
+	-webkit-overflow-scrolling: touch;
 }
 div.scrollableArea{
 	position: relative;
 	width: auto;
 	height: 100%;
+	-webkit-overflow-scrolling: touch;
 }
