--- a/css/estilo.css
+++ b/css/estilo.css
@@ -178,7 +178,7 @@ footer{
 }
 #member-list a{
 	text-decoration: none;
-	color: black;
+	color: rgb(15,15,15);
 }
 #members{
 	display: inline-block;
